Rewirite/refactor bunch of notes

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,27 +1,12 @@
 {
-    "overrides": [
-        {
-            "files": [
-                "*.md"
-            ],
-            "options": {
-                "arrowParens": "always",
-                "bracketSameLine": false,
-                "bracketSpacing": true,
-                "embeddedLanguageFormatting": "off",
-                "htmlWhitespaceSensitivity": "css",
-                "insertPragma": false,
-                "jsxSingleQuote": false,
-                "printWidth": 80,
-                "proseWrap": "always",
-                "quoteProps": "as-needed",
-                "requirePragma": false,
-                "semi": true,
-                "singleAttributePerLine": false,
-                "singleQuote": false,
-                "tabWidth": 2,
-                "useTabs": false
-            }
-        }
-    ]
+  "overrides": [
+    {
+      "files": ["*.md"],
+      "options": {
+        "tabWidth": 2,
+        "printWidth": 80,
+        "proseWrap": "always"
+      }
+    }
+  ]
 }
