--- a/papis/2022-Donut Tutorial/info.yaml
+++ b/papis/2022-Donut Tutorial/info.yaml
@@ -12,4 +12,5 @@ shorttitle: Donut Tutorial
 type: website
 url: http://www.youtube.com/playlist?list=PLjEaoINr3zgFX8ZsChQVQsuDSjEqdWMAD
 year: 2022
+author: Blender Guru
 
