--- a/papis/2023-Debugging In Neovim/info.yaml
+++ b/papis/2023-Debugging In Neovim/info.yaml
@@ -11,4 +11,5 @@ title: Debugging In Neovim (ft BashBunni)
 shorttitle: Debugging In Neovim
 type: video.other
 url: https://www.youtube.com/watch?v=0moS8UHupGc
+author: TJ DeVries
 year: 2023
