--- a/papis/74b5d9ce4b6ffcf86eaf9484220a6ab5/info.yaml
+++ b/papis/74b5d9ce4b6ffcf86eaf9484220a6ab5/info.yaml
@@ -11,3 +11,4 @@ shorttitle: The Python stdlib
 type: website
 url: https://docs.python.org/3/library/index.html
 year: 2023
+author: Python documentation
