--- a/papis/c771f17042efd4785d59b86771535801/info.yaml
+++ b/papis/c771f17042efd4785d59b86771535801/info.yaml
@@ -11,4 +11,5 @@ shorttitle: Python FAQ
 type: website
 url: https://docs.python.org/3/faq/index.html
 year: 2023
-autor: Official Python Documentation
+author: Python documentation
+
