Update papis notes

--- a/papis/2023-offical-python-documentation-the-python-tutorial/info.yaml
+++ b/papis/2023-offical-python-documentation-the-python-tutorial/info.yaml
@@ -6,7 +6,7 @@ files:
 - 2023-offical-python-documentation-the-python-tutorial.md
 notes: notes.md
 papis_id: 45a7e55b627e9de91358adcdecd50846
-ref: ThePythonTuto
+ref: ThePythonTutorial
 shorttitle: The Python Tutorial
 time-added: 2023-06-22-01:05:47
 title: The Python Tutorial
