--- a/papis/f96b16b2b9e5ac20197ca7000d11c506/info.yaml
+++ b/papis/f96b16b2b9e5ac20197ca7000d11c506/info.yaml
@@ -1,14 +1,15 @@
 abstract: Taskwarrior is an open-source, cross platform task management tool available
   right in your terminal!In this talk, we will provide a comprehensive overview of...
+author: Tomas Babej
 files: []
 keywords: taskwarrior, taskwarrior plugins, command line, productivity tools, project
   management, calendar, todo, todo list
+notes: notes.md
 papis_id: b3f2c5f3a1e08c5497deb059cada9fac
 ref: DiveIntoTaskwarriorTomasBabej
-time-added: 2023-06-25-02:01:06
 shorttitle: A Dive into Taskwarrior
+time-added: 2023-06-25-02:01:06
 title: A Dive into Taskwarrior Ecosystem with Tomas Babej
 type: video.other
 url: https://www.youtube.com/watch?v=tijnc65soEI
-author: Tomas Babej
 year: 2019
