Update nixos guide notes

--- a/papis/nixos/info.yaml
+++ b/papis/nixos/info.yaml
@@ -1,5 +1,5 @@
 abstract: ''
-author: T, Wil
+author: Taylor, Wil
 files: []
 keywords: video, sharing, camera phone, video phone, free, upload
 notes: notes.md
