--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,4 @@
-.DS_Store
-.idea
-*.log
-*.out
-.trash
-**/.obsidian/*
-!**/.obsidian/snippets
-.stversions
-.stfolders
-*.lock
-
-excalidraw/
-tmp/
-books/
-books_tablet/
-prv_*
-papis/**/*.pdf
-papis/**/*.epub
-papis/**/*.mp3
-papis/**/*.mp4
-papis/**/*.m4b
-papis/**/*.djvu
-papis/**/*.m4a
-_library
-salesloop
+_library/
+.stversions/
+.obsidian/
+private/
