Cleanup syncthing ignore patterns

--- a/.stignore
+++ b/.stignore
@@ -1,84 +1,3 @@
-$WINDOWS.~BT
-*.!Sync
-*.Cache
-*.SyncOld
-*.SyncPart
-*.SyncTemp
-*.bak
-*.bts
-*.crdownload
-*.git
-*.lock
-*.log
-*.old
-*.part
-*.shm
-*.sqlite*
-*.svn
-*.swp
-*.sync
-*.tmp
-*.wal
-*CACHE*
-*S*Conflict*
-*Temporary*
-*cache*
-*inaccessible*
-*s*conflict*
-*~
-.#*
-.*.swp
-.DS_Store
-.Prullenbak
-.Shared
-.Spotlight-V100
-.SyncArchive
-.SyncID
-.SyncIgnore
-.Trash*
-._*
-.escheck.tmp
-.gvfs
-.local/share/trash
-.svn
-.sync
-.thumbnails
-.trash*
-.~lock.
-@eaDir
-LOST.DIR
-System*Volume*
-TEMP
-Temp
-Thumbs.db
-Trash*
-a_writable
-asset-cache
-captcha_tmp
-checkouts
-data/searchIndex
-desktop.ini
-dev/
-ehthumbs.db
-files_trashbin/
-forms.json
-lost+found
-nobackup
-pagefile.sys
-proc/
-run/
-searchIndex
-selinux/
-staging.*
-sys/
-templates_c
-thumbnails
-tmp/
-tmp_uploads
-trash
-var/lib/lxcfs/
-~$*
-books
 .git
 .obsidian
-.trash
+private
